--- a/scss/base/_truncated_text.scss
+++ b/scss/base/_truncated_text.scss
@@ -1,75 +1,70 @@
 @import "../_common.scss";
 
 .truncated_text {
-    font-size: 14px;
-
-    .text_container {
+    .styled_text {
+        height: $summary-line-height * 2;
         overflow: hidden;
 
-        .text_content {
-            .truncated {
+        .original {
+            @include summary-text;
+
+            b {
+                font-weight: bold;
+            }
+
+            i {
+                font-style: italic;
+            }
+
+            ul {
+                list-style-type: disc;
+            }
+
+            ol {
+                list-style-type: decimal;
+            }
+
+            ul, ol {
+                li {
+                    padding: 0;
+                    margin-left: 40px;
+                    border: none;
+                    line-height: $summary-line-height;
+                }
+            }
+        }
+    }
+
+    &.expanded .styled_text {
+        height: auto;
+    }
+
+    .links {
+        display: none;
+    }
+
+    &.expandable .links {
+        display: block;
+    }
+
+    .links {
+        .more {
+        }
+
+        .less {
+            display: none;
+        }
+    }
+
+    &.expanded {
+        .links {
+            .more {
                 display: none;
             }
 
-            .entire_text {
-                @include after-clearfix;
-                white-space: pre-wrap;
-
-                .text {
-                    white-space: pre-wrap;
-                    overflow: hidden;
-                }
+            .less {
+                display: inline;
             }
-        }
-
-        &.more {
-            .text_content {
-                .truncated {
-                    display: inline;
-                }
-
-                .entire_text {
-                    word-wrap: break-word;
-
-                    .text {
-                        white-space: pre-wrap;
-                        float: none;
-                        width: auto;
-                        display: inline;
-                    }
-                }
-            }
-        }
-    }
-}
-
-.styled_text {
-
-    b {
-        font-weight: bold;
-    }
-
-    i {
-        font-style: italic;
-    }
-
-    ul {
-        list-style-type: disc;
-    }
-
-    ol {
-        list-style-type: decimal;
-    }
-
-    ul, ol {
-        margin-top: 13px;
-        margin-bottom: 13px;
-
-        li {
-            padding: 0;
-            margin-left: 40px;
-            border: none;
-            line-height: 14px;
         }
     }
 }
